<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="media">Медиатека</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="addressPracticum">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="emailSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mailMessage">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="emailAddress">seropyz@ya.ru</string>
    <string name="clearSearch">Очистить</string>
    <string name="separator">separator</string>
    <string name="arrow_button">arrow button</string>
    <string name="trackImage">track image</string>
    <string name="emptySearch">Ничего не нашлось</string>
    <string name="errorSearch">Проблемы со связью\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="noData">Нет данных</string>
    <string name="youSearch">Вы искали</string>
    <string name="cleanHistory">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="collection">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="trackTime">0:00</string>
    <string name="library">Медиатека</string>
    <string name="favorite_tracks">Избранный треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_favorite">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_cover">Обложка плейлиста</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_note">Описание</string>
    <string name="playlist_text_button_create">Создать</string>
    <string name="covers">covers</string>
    <string name="coverPlaylist">Обложка плейлиста</string>
    <string name="addToPlaylist">Добавить в плейлист</string>
    <string name="messageAlreadyAdded">Трек уже добавлен в плейлист %1$s</string>
    <string name="messageAdded">Добавлено в плейлист %1$s</string>
    <string name="playlistCreated">Плейлист %1$s создан</string>
    <string name="dialogTitle">Завершить создание плейлиста?</string>
    <string name="dialogMessage">Все несохраненные данные будут потеряны</string>
    <string name="dialogCancel">Отмена</string>
    <string name="dialogClose">Завершить</string>
    <string name="time">%1$s минут</string>
    <string name="countTracks">%1$s треков</string>
    <string name="deleteTrack">Хотите удалить трек?</string>
    <string name="textDeletePlaylist">Хотите удалить плейлист %1$s?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="noTracksInPlaylist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="sharingTrack">%1$s. %2$s - %3$s (%4$s)</string>
    <string name="sharePlaylist">Поделиться</string>
    <string name="editPlaylist">Редактировать информацию</string>
    <string name="editPlaylistTitle">Редактировать</string>
    <string name="deletePlaylist">Удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="playlistUpdated">Плейлист %1$s обновлен</string>
</resources>