<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".playlists.ui.fragment.CreatePlaylistFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageButton
        android:id="@+id/arrow_back"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/new_playlist"
        android:textColor="@color/textSettingsColor"
        android:textFontWeight="500"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/arrow_back"
        app:layout_constraintStart_toEndOf="@+id/arrow_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/playlistCover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/empty_cover_border"
        android:contentDescription="@string/playlist_cover"
        android:padding="106dp"
        android:src="@drawable/add_photo"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/arrow_back"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/playlistName"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_playlist"
        android:fontFamily="@font/ys_display_regular"
        android:hint="@string/playlist_name"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:textColor="@color/playlistEditText"
        android:textColorHint="@color/playlistEditText"
        android:textCursorDrawable="@drawable/cursor"
        android:textFontWeight="400"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/playlistCover" />

    <TextView
        android:id="@+id/playlistNameSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/background"
        android:fontFamily="@font/ys_display_regular"
        android:paddingHorizontal="4dp"
        android:text="@string/playlist_name"
        android:textColor="@color/playlistEditFill"
        android:textFontWeight="400"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/playlistName"
        app:layout_constraintStart_toStartOf="@+id/playlistName"
        app:layout_constraintTop_toTopOf="@+id/playlistName" />

    <EditText
        android:id="@+id/playlistNote"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_playlist"
        android:fontFamily="@font/ys_display_regular"
        android:hint="@string/playlist_note"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:textColor="@color/playlistEditText"
        android:textColorHint="@color/playlistEditText"
        android:textCursorDrawable="@drawable/cursor"
        android:textFontWeight="400"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/playlistName" />

    <TextView
        android:id="@+id/playlistNoteSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/background"
        android:fontFamily="@font/ys_display_regular"
        android:paddingHorizontal="4dp"
        android:text="@string/playlist_note"
        android:textColor="@color/playlistEditFill"
        android:textFontWeight="400"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/playlistNote"
        app:layout_constraintStart_toStartOf="@+id/playlistNote"
        app:layout_constraintTop_toTopOf="@+id/playlistNote" />

    <TextView
        android:id="@+id/buttonCreate"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_create_playlist"
        android:clickable="true"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:text="@string/playlist_text_button_create"
        android:textColor="#FFFFFF"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>