<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/App"
    android:background="@color/backgroundSettings">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.track.TrackActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <ImageButton
            android:id="@+id/arrow_back"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow" />

        <ImageView
            android:id="@+id/trackImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:contentDescription="@string/trackImage"
            android:src="@drawable/placeholder_big"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/arrow_back"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/trackName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:textColor="@color/trackName"
            android:textFontWeight="400"
            android:textSize="22sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/trackImage"
            android:textAlignment="textStart"/>

        <TextView
            android:id="@+id/artistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:textColor="@color/trackName"
            android:textFontWeight="400"
            android:textSize="14sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/trackName" />

        <ImageButton
            android:id="@+id/addPlaylistButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="54dp"
            android:background="@null"
            app:layout_constraintEnd_toStartOf="@+id/playButton"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/artistName"
            app:srcCompat="@drawable/add_playlist" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="0dp"
            android:layout_height="84dp"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/addPlaylistButton"
            app:layout_constraintEnd_toStartOf="@+id/addFavoriteButton"
            app:layout_constraintStart_toEndOf="@+id/addPlaylistButton"
            app:layout_constraintTop_toTopOf="@+id/addPlaylistButton"
            app:srcCompat="@drawable/play" />

        <ImageButton
            android:id="@+id/addFavoriteButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="54dp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@+id/playButton"
            app:layout_constraintTop_toBottomOf="@id/artistName"
            app:srcCompat="@drawable/add_favorite" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:textColor="@color/trackInfo"
            android:textFontWeight="500"
            android:textSize="14sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/playButton" />

        <TextView
            android:id="@+id/duration"
            style="@style/trackInfoTitle"
            android:layout_marginTop="39dp"
            android:text="@string/duration"
            app:layout_constraintEnd_toStartOf="@+id/trackTimeMills"
            app:layout_constraintTop_toBottomOf="@id/time" />

        <TextView
            android:id="@+id/trackTimeMills"
            style="@style/trackInfo"
            app:layout_constraintBottom_toBottomOf="@+id/duration"
            app:layout_constraintStart_toEndOf="@+id/duration"/>

        <TextView
            android:id="@+id/collection"
            style="@style/trackInfoTitle"
            android:layout_marginTop="17dp"
            android:text="@string/collection"
            app:layout_constraintEnd_toStartOf="@+id/collectionName"
            app:layout_constraintTop_toBottomOf="@id/duration" />

        <TextView
            android:id="@+id/collectionName"
            style="@style/trackInfo"
            app:layout_constraintBottom_toBottomOf="@+id/collection"
            app:layout_constraintStart_toEndOf="@+id/collection" />

        <TextView
            android:id="@+id/year"
            style="@style/trackInfoTitle"
            android:layout_marginTop="17dp"
            android:text="@string/year"
            app:layout_constraintEnd_toStartOf="@+id/releaseDate"
            app:layout_constraintTop_toBottomOf="@id/collection" />

        <TextView
            android:id="@+id/releaseDate"
            style="@style/trackInfo"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/year"
            app:layout_constraintStart_toEndOf="@+id/year" />

        <TextView
            android:id="@+id/genre"
            style="@style/trackInfoTitle"
            android:layout_marginTop="17dp"
            android:text="@string/genre"
            app:layout_constraintEnd_toStartOf="@+id/primaryGenreName"
            app:layout_constraintTop_toBottomOf="@id/year" />

        <TextView
            android:id="@+id/primaryGenreName"
            style="@style/trackInfo"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/genre"
            app:layout_constraintStart_toEndOf="@+id/genre" />

        <TextView
            android:id="@+id/countryTitle"
            style="@style/trackInfoTitle"
            android:layout_marginTop="17dp"
            android:text="@string/country"
            app:layout_constraintEnd_toStartOf="@+id/country"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <TextView
            android:id="@+id/country"
            style="@style/trackInfo"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/countryTitle"
            app:layout_constraintStart_toEndOf="@+id/countryTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>